codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_input_interrupts_response.snap
---
source: core/tests/suite/scenarios.rs
assertion_line: 1268
expression: snapshot
---
Scenario: Astra receives new user input after its unfinished response is interrupted.

## Window 1
-- request 1 (request) --
00:additional_tools/developer (3; hash=9ee5197c41814b78):
        - namespace/functions; hash=3c69b82990ffe4f8
          - custom/exec
          - function/wait
          - function/request_user_input
          - function/request_user_input_async
        - namespace/clock: Tools for reading and waiting on time.; hash=f402e8c5e9b5e317
          - function/sleep
        - namespace/collaboration: Tools for spawning and managing sub-agents.; hash=d700675fb2316963
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
          - function/wait_agent
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <COLLABORATION_MODE>
03:message/developer:
    <MULTI_AGENT_ROLE>
04:message/developer:
    <MULTI_AGENT_MODE>
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    Draft a launch update.
-- request 2 (request) --
07:message/assistant:
    I will draft the update.
08:message/user:
    Make it a customer update.
